k8s_all_the_things.yml
# clemenko
---
apiVersion: v1
kind: Namespace
metadata:
  name: flask
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: flask
  labels:
    app: flask
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: clemenko/flask_demo
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: flask
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: flask
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: flask
    kubernetes.io/name: "flask"
  name: flask
  namespace: flask
spec:
  selector:
    app: flask
  type: NodePort
  ports:
  - name: flask
    protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: redis
    kubernetes.io/name: "redis"
  name: redis
  namespace: flask
spec:
  selector:
    app: redis
  ports:
  - name: redis
    protocol: TCP
    port: 6379
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
    kubernetes.io/name: "mongo"
  name: mongo
  namespace: flask
spec:
  selector:
    app: mongo
  ports:
  - name: mongo
    protocol: TCP
    port: 27017
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flask
  namespace: flask
spec:
  rules:
  - host: app.dockr.life
    http:
      paths:
      - path: /
        backend:
          serviceName: flask
          servicePort: 5000
---
